# mainstreetmfb-bot-display

./: .gitignore  README.md  app.py  embeddings.py  ingest.py  llm.py  main.py  pyproject.toml  requirements.txt  schemas.py  vector_store.py
data/: about-us.txt  account-opening-savings-products-agreement-terms-and-conditions.txt  branch-network.txt  bvn-and-nin-update.txt  card-services.txt  career.txt  common-site-text.txt  contact-us.txt  corporate-account.txt  current-account-individual.txt  e-products.txt  faq.txt  fraud-alerts.txt  greater-tomorrow-individual-account.txt  home.txt  instant-money-transfer.txt  internet-banking.txt  latest-news.txt  loans.txt  lost-stolen-cards.txt  main-essential.txt  main-fix-and-gold-individual.txt  main-save-individual.txt  main-swift-cash.txt  main-target-savings-account.txt  main-treasure-note.txt  mainstreet-bank-forms.txt  mainstreet-enterprise-loan.txt  mainstreet-equip-loan-special.txt  mainstreet-special-edu-finance.txt  management-team.txt  mobile-banking.txt  our-directors.txt  payee-loan.txt  privacy-policy.txt  retail-banking.txt  terms-and-conditions.txt  ussd-banking.txt  vacancies.txt  whistle-blowing.txt
static/: index.html  mainstreetmfb-sdk.js  script.js  style.css  utils.js
