[project]
name = "mainstreetmfb-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.137.1",
    "groq>=1.4.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.9",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.0",
    "uvicorn>=0.49.0",
]
